<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:text="@string/AppForHomeTask"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/homeTask1"
        style="@style/mainButton"
        android:text="@string/lesson_first" />

    <Button
        android:id="@+id/homeTask2"
        style="@style/mainButton"
        android:text="@string/lesson_second" />

    <Button
        android:id="@+id/homeTask3"
        style="@style/mainButton"
        android:text="@string/lesson_third" />

    <Button
        android:id="@+id/homeTask4"
        style="@style/mainButton"
        android:text="@string/lesson_fourth" />

    <Button
        android:id="@+id/homeTask5"
        style="@style/mainButton"
        android:text="@string/lesson_fifth" />
</LinearLayout>
