<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/action_item1"
        android:orderInCategory="100"
        android:title="@string/action_item1"
        app:showAsAction="ifRoom|withText"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <item
        android:id="@+id/action_item2"
        android:orderInCategory="100"
        android:title="@string/action_item2"
        app:showAsAction="ifRoom|withText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <item
        android:id="@+id/action_item3"
        android:orderInCategory="100"
        android:title="@string/action_item3"
        app:showAsAction="ifRoom|withText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <item
        android:id="@+id/action_item4"
        android:orderInCategory="100"
        android:title="@string/action_item4"
        app:showAsAction="ifRoom|withText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <item
        android:id="@+id/action_item5"
        android:orderInCategory="100"
        android:title="@string/action_item5"
        app:showAsAction="ifRoom|withText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</menu>
