<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".main"
    android:weightSum="1"
    android:background="#FFFFFF">

    <TextView
        android:text="Application for home tasks"
        android:textAlignment="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/outputText1"
        android:layout_weight="0.08"
        android:autoText="false"
        android:background="#aebef7" />

    <Button
        android:text="@string/lesson_first"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homeTask1"
        android:layout_weight="0.03" />

    <Button
        android:text="@string/lesson_second"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homeTask2"
        android:layout_weight="0.03" />

    <Button
        android:text="@string/lesson_third"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homeTask3"
        android:layout_weight="0.03" />

</LinearLayout>